test/regress/coverage-expected-cost.test
; Coverage test for textual_xacts.cc
; Posting with @ but no cost amount

2024/01/01 Test
    Assets:Stocks     10 AAPL @
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Stocks     10 AAPL @
                    ^^^^^^^^^
Error: Expected a cost amount
end test
